--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <title>Your React App</title>
 </head>
 <body>
     <div id="root"></div>
-
-    <script type="text/babel">
-        const App = () => {
-            return <h1>Hello, React!</h1>;
-        };
-
-        ReactDOM.render(<App />, document.getElementById('root'));
-    </script>
+    <script src="src/App.js"></script> <!-- Adjust the path based on your build output -->
 </body>
 </html>
