--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your React App</title>
+    <title>Welcome to React</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #282c34;
+            color: white;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 48px;
+        }
+        p {
+            font-size: 18px;
+        }
+        a {
+            color: #61dafb;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .logo {
+            height: 40vmin;
+            pointer-events: none;
+        }
+        @media (prefers-reduced-motion: no-preference) {
+            .logo {
+                animation: logo-spin infinite 20s linear;
+            }
+        }
+        @keyframes logo-spin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-    <div id="root"></div>
-    <script src="src/App.js"></script> <!-- Adjust the path based on your build output -->
+    <header>
+        <img src="./logo.svg" class="logo" alt="React logo" />
+        <h1>Welcome to Bussiness Optima </h1>
+        <h2> This is a React application </h2>
+
+        <p>Edit <code>src/App.js</code> and save to reload.</p>
+        <p>
+            <a href="https://businessoptima.com" target="_blank" rel="noopener noreferrer">Click Here to Know More about Bussiness Optima</a>
+        </p>
+    </header>
 </body>
 </html>
